# vibrator

./: DATA_INTEGRATION.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
examples/: align_input.py  chat_room_matchmaking.py  chat_room_penalty.py  chat_sampling.py  integrate_your_data.py  items.txt  mvp.py  penalty_explainer.py  recipe_personalization.py  sliders.json  synthetic_demo.py  vibe_meter.py  weird_exotic_demo.py
fixtures/: README.md  regression_logs.json
scripts/: update_regression_fixture.py
tests/: test_actions.py  test_encoder_integration.py  test_normalization.py  test_pipeline.py  test_regression_fixture.py  test_synthetic.py
vibrator/: __init__.py  actions.py  calibration.py  chat.py  encoder.py  normalization.py  pipeline.py  profile.py  synthetic.py  utils.py  weights.py
