[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "vibrator"
version = "0.1.0"
description = "Vibrator: core library"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Eric Lewis" }
]

[project.urls]
Homepage = "https://github.com/ericlewis/vibrator"

[tool.hatch.build.targets.wheel]
packages = ["vibrator"]
